# Leo_monitor

./: README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
arduino/: heart_rate.ino
backend/: .env  Cargo.toml
backend/src/: arduino_serial.rs  db.rs  main.rs  models.rs  routes.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: LiveChart.vue
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  Login.vue
