[package]
name = "heart_rate_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-ws = "0.3"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serialport = "4.6"
mongodb = "3.2"
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
rand = "0.8"
futures = "0.3.31"
